# CSC699-Lexical-Text-Similarity

./: CMakeLists.txt  FloatVector.cpp  FloatVector.h  LTS.h  LTS_2d.cpp  LTS_flat.cpp  LTS_flat_ijk.cpp  LTS_flat_ijk_bco.cpp  LTS_flat_ikj.cpp  LTS_flat_ikj_bco.cpp  LTS_flat_jik.cpp  LTS_flat_jik_bco.cpp  LTS_flat_jki.cpp  LTS_flat_jki_bco.cpp  LTS_flat_kij_bco.cpp  LTS_flat_kji.cpp  LTS_flat_kji_bco.cpp  LTS_flat_loop_ijk.cpp  LTS_flat_loop_ijk_bco.cpp  LTS_flat_loop_ikj.cpp  LTS_flat_loop_ikj_bco.cpp  LTS_flat_loop_jik.cpp  LTS_flat_loop_jik_bco.cpp  LTS_flat_loop_jki.cpp  LTS_flat_loop_jki_bco.cpp  LTS_flat_loop_kij.cpp  LTS_flat_loop_kij_bco.cpp  LTS_flat_loop_kji.cpp  LTS_flat_loop_kji_bco.cpp  LTS_flat_loop_reorder.cpp  README.md  Runtimes.xlsx  linear.cpp  linear.h  linear_2d.cpp  linear_2d.h  main.cpp  tokenize.cpp  tokenize.h
data/L3_O0_P1/: ijk.csv  ijk_bco_16.csv  ijk_bco_2048.csv  ikj_bco_1024.csv  ikj_bco_16.csv  ikj_bco_256.csv  ikj_bco_32.csv  ikj_bco_512.csv  ikj_bco_64.csv  jik_bco_32.csv  jki.csv  jki_bco_128.csv  jki_bco_2048.csv  jki_bco_256.csv  jki_bco_32.csv  kij_bco_1024.csv  kji.csv  kji_bco_1024.csv  kji_bco_2048.csv  kji_bco_256.csv  kji_bco_512.csv  kji_bco_64.csv
data/L3_O0_P2/: ijk_bco_128.csv  ijk_bco_16.csv  ijk_bco_2048.csv  ijk_bco_256.csv  ijk_bco_32.csv  ijk_bco_64.csv  ikj.csv  ikj_bco_1024.csv  ikj_bco_32.csv  ikj_bco_64.csv  jik.csv  jik_bco_16.csv  jki_bco_16.csv  jki_bco_256.csv  jki_bco_512.csv  jki_bco_64.csv  kij_bco_1024.csv  kji.csv  kji_bco_1024.csv  kji_bco_16.csv  kji_bco_256.csv  kji_bco_32.csv  kji_bco_512.csv
data/L3_O0_P4/: ijk_bco_1024.csv  ijk_bco_256.csv  ijk_bco_512.csv  ijk_bco_64.csv  ikj.csv  ikj_bco_128.csv  ikj_bco_2048.csv  ikj_bco_32.csv  ikj_bco_512.csv  jik.csv  jik_bco_16.csv  jik_bco_32.csv  jik_bco_64.csv  jki_bco_1024.csv  jki_bco_16.csv  jki_bco_64.csv  kij.csv  kij_bco_1024.csv  kij_bco_2048.csv  kij_bco_256.csv  kij_bco_32.csv  kij_bco_512.csv  kji.csv  kji_bco_2048.csv  kji_bco_256.csv  kji_bco_512.csv  kji_bco_64.csv
data/L3_O1_P1/: ijk.csv  ijk_bco_1024.csv  ijk_bco_2048.csv  ijk_bco_32.csv  ikj.csv  ikj_bco_1024.csv  ikj_bco_128.csv  ikj_bco_16.csv  ikj_bco_2048.csv  ikj_bco_256.csv  ikj_bco_32.csv  ikj_bco_64.csv  jik.csv  jik_bco_128.csv  jik_bco_256.csv  jik_bco_512.csv  jki.csv  jki_bco_16.csv  jki_bco_512.csv  kij_bco_128.csv  kij_bco_32.csv  kij_bco_64.csv  kji_bco_1024.csv  kji_bco_16.csv  kji_bco_2048.csv  kji_bco_512.csv
data/L3_O1_P2/: ijk_bco_16.csv  ijk_bco_256.csv  ijk_bco_64.csv  ikj_bco_1024.csv  ikj_bco_256.csv  ikj_bco_32.csv  ikj_bco_512.csv  ikj_bco_64.csv  jik_bco_1024.csv  jik_bco_128.csv  jik_bco_16.csv  jik_bco_256.csv  jik_bco_64.csv  jki.csv  jki_bco_128.csv  jki_bco_2048.csv  jki_bco_64.csv  kij_bco_1024.csv  kij_bco_128.csv  kij_bco_16.csv  kij_bco_32.csv  kji_bco_256.csv  kji_bco_512.csv
data/L3_O1_P4/: ijk_bco_1024.csv  ijk_bco_2048.csv  ikj.csv  ikj_bco_1024.csv  ikj_bco_128.csv  ikj_bco_2048.csv  ikj_bco_256.csv  jik_bco_1024.csv  jik_bco_32.csv  jik_bco_64.csv  jki_bco_1024.csv  jki_bco_128.csv  jki_bco_32.csv  kij.csv  kij_bco_128.csv  kij_bco_2048.csv  kij_bco_256.csv  kij_bco_32.csv  kji_bco_1024.csv  kji_bco_32.csv  kji_bco_64.csv
data/L3_O2_P1/: ijk_bco_1024.csv  ijk_bco_128.csv  ijk_bco_512.csv  ikj.csv  ikj_bco_128.csv  ikj_bco_16.csv  ikj_bco_2048.csv  ikj_bco_32.csv  jik_bco_16.csv  jik_bco_32.csv  jki_bco_1024.csv  jki_bco_128.csv  jki_bco_16.csv  jki_bco_32.csv  kij_bco_1024.csv  kij_bco_128.csv  kij_bco_16.csv  kij_bco_256.csv  kij_bco_32.csv  kji_bco_128.csv
data/L3_O2_P2/: ijk_bco_128.csv  ijk_bco_2048.csv  ijk_bco_256.csv  ijk_bco_512.csv  ijk_bco_64.csv  ikj_bco_1024.csv  ikj_bco_128.csv  ikj_bco_2048.csv  ikj_bco_256.csv  ikj_bco_32.csv  ikj_bco_512.csv  jik_bco_1024.csv  jik_bco_2048.csv  jki_bco_1024.csv  jki_bco_128.csv  jki_bco_32.csv  jki_bco_512.csv  jki_bco_64.csv  kij_bco_16.csv  kji_bco_2048.csv  kji_bco_512.csv
data/L3_O2_P4/: ijk_bco_1024.csv  ijk_bco_128.csv  ijk_bco_16.csv  ijk_bco_256.csv  ijk_bco_512.csv  ijk_bco_64.csv  ikj.csv  ikj_bco_1024.csv  ikj_bco_32.csv  ikj_bco_512.csv  ikj_bco_64.csv  jik.csv  jik_bco_128.csv  jik_bco_16.csv  jik_bco_64.csv  jki_bco_1024.csv  jki_bco_2048.csv  jki_bco_512.csv  kij_bco_16.csv  kij_bco_2048.csv  kij_bco_256.csv  kji.csv  kji_bco_1024.csv  kji_bco_128.csv  kji_bco_2048.csv  kji_bco_256.csv  kji_bco_32.csv  kji_bco_512.csv  kji_bco_64.csv
data/L3_O3/: ijk.csv  ijk_bco_16.csv  ijk_bco_32.csv  ijk_bco_512.csv  ijk_bco_64.csv  ikj.csv  ikj_bco_16.csv  jik_bco_128.csv  jik_bco_512.csv  jki.csv  jki_bco_1024.csv  jki_bco_128.csv  jki_bco_16.csv  jki_bco_2048.csv  jki_bco_32.csv  jki_bco_512.csv  kij_bco_32.csv  kij_bco_512.csv  kji_bco_1024.csv  kji_bco_16.csv  kji_bco_2048.csv  kji_bco_64.csv
data/L3_O3_P2/: ijk_bco_2048.csv  ijk_bco_32.csv  ijk_bco_64.csv  ikj_bco_128.csv  ikj_bco_256.csv  jik.csv  jik_bco_1024.csv  jik_bco_128.csv  jik_bco_32.csv  jik_bco_512.csv  jki.csv  jki_bco_16.csv  jki_bco_2048.csv  jki_bco_64.csv  kij.csv  kij_bco_1024.csv  kij_bco_16.csv  kji_bco_16.csv  kji_bco_64.csv
data/L3_O3_P4/: ijk_bco_1024.csv  ijk_bco_128.csv  ijk_bco_2048.csv  ijk_bco_64.csv  ikj_bco_1024.csv  ikj_bco_128.csv  ikj_bco_16.csv  ikj_bco_256.csv  ikj_bco_64.csv  jik_bco_128.csv  jik_bco_256.csv  jik_bco_32.csv  jik_bco_512.csv  jik_bco_64.csv  jki_bco_16.csv  jki_bco_2048.csv  jki_bco_256.csv  jki_bco_32.csv  jki_bco_512.csv  kij_bco_1024.csv  kij_bco_16.csv  kij_bco_2048.csv  kij_bco_256.csv  kij_bco_32.csv  kji.csv  kji_bco_1024.csv  kji_bco_512.csv
data/runtime_data/: Runtime_Combined.csv  Runtime_Combined.ods
data/runtime_data/L3_O0_P1/: .~lock.ijk_bco_128.csv#  ijk_bco_1024.csv  ijk_bco_128.csv  ijk_bco_256.csv  ijk_bco_32.csv  ijk_bco_512.csv  ijk_bco_64.csv  ikj.csv  ikj_bco_128.csv  ikj_bco_2048.csv  jik.csv  jik_bco_1024.csv  jik_bco_128.csv  jik_bco_16.csv  jik_bco_2048.csv  jik_bco_256.csv  jik_bco_512.csv  jik_bco_64.csv  jki_bco_1024.csv  (+14 more)
data/scripts/: merge.py
scripts/: batch_timer.py  buildreport.py  generate_benchmark.py  likwidcsv.py  merge.py  perfbatch.py
(+336 files in other folders)
